BottleNose/vpc_public_server_resource.json
{
  "Resources": {
    "NHTLABVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "172.31.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHT-LAB-VPC"
          }
        ]
      }
    },
    "NHTLABVPCSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "NHTLABVPC"
        },
        "CidrBlock": "172.31.0.0/24",
        "AvailabilityZone": "us-east-1a",
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHT-LAB-VPC-Subnet-a"
          }
        ]
      }
    },
    "NHTLABIGW": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHTLABIGW"
          }
        ]
      }
    },
    "NHTLABIGWAttach": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "NHTLABVPC"
        },
        "InternetGatewayId": {
          "Ref": "NHTLABIGW"
        }
      }
    },
    "NHTLABRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "NHTLABVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHTLABRouteTable"
          }
        ]
      }
    },
    "NHTLABRoute": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NHTLABIGWAttach",
      "Properties": {
        "RouteTableId": {
          "Ref": "NHTLABRouteTable"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "NHTLABIGW"
        }
      }
    },
    "NHTLABSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "NHTLABVPCSubnet"
        },
        "RouteTableId": {
          "Ref": "NHTLABRouteTable"
        }
      }
    },
    "NHTLABNetworkAcl": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "NHTLABVPC"
        },
        "Tags": [
          {
            "Key": "Application",
            "Value": {
              "Ref": "NHTLABNetworkAcl"
            }
          }
        ]
      }
    },
    "NHTLABInboundIPV4NetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "NHTLABNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "false",
        "CidrBlock": "0.0.0.0/0"
      }
    },
    "NHTLABOutBoundIPV4NetworkAclEntry": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "NetworkAclId": {
          "Ref": "NHTLABNetworkAcl"
        },
        "RuleNumber": "100",
        "Protocol": "-1",
        "RuleAction": "allow",
        "Egress": "true",
        "CidrBlock": "0.0.0.0/0"
      }
    },
    "NHTLABSubnetNetworkAclAssociation": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "NHTLABVPCSubnet"
        },
        "NetworkAclId": {
          "Ref": "NHTLABNetworkAcl"
        }
      }
    },
    "NHTLABSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "NHTLABSG",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "NHTLABSGIngressRule",
            "FromPort": 22,
            "IpProtocol": "tcp",
            "ToPort": 22
          },
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "NHTLABSGIngressRule",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "NHTLABSGEgressRule",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Ref": "NHTLABVPC"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHTLABSG"
          }
        ]
      }
    },
    "NHTLABSSMRoleforEC2": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Version": "2012-10-17",
          "Statement": [
            {
              "Effect": "Allow",
              "Principal": {
                "Service": [
                  "ec2.amazonaws.com"
                ]
              },
              "Action": [
                "sts:AssumeRole"
              ]
            }
          ]
        },
        "ManagedPolicyArns": [
          "arn:aws:iam::aws:policy/service-role/AmazonEC2RoleforSSM"
        ]
      }
    },
    "NHTLABSSMInstanceProfile": {
      "Type": "AWS::IAM::InstanceProfile",
      "Properties": {
        "Path": "/",
        "Roles": [
          {
            "Ref": "NHTLABSSMRoleforEC2"
          }
        ]
      }
    },
    "serverNHTLABEIP": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "serverNHTLABEIP"
          }
        ]
      }
    },
    "serverNHTEIPAllocation": {
      "Type": "AWS::EC2::EIPAssociation",
      "DependsOn": "NHTLABIGWAttach",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": [
            "serverNHTLABEIP",
            "AllocationId"
          ]
        },
        "InstanceId": {
          "Ref": "NHTLABEC2server"
        }
      }
    },
    "NHTLABEC2server": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-00eb20669e0990cb4",
        "InstanceType": "t2.micro",
        "KeyName": {
          "Fn::GetAtt": [
            "NHTLABEC2KeyPair",
            "KeyName"
          ]
        },
        "IamInstanceProfile": {
          "Ref": "NHTLABSSMInstanceProfile"
        },
        "SubnetId": {
          "Ref": "NHTLABVPCSubnet"
        },
        "AvailabilityZone": "us-east-1a",
        "SecurityGroupIds": [
          {
            "Ref": "NHTLABSG"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "NHTLABEC2server"
          },
          {
            "Key": "UserAlias",
            "Value": {
              "Ref": "UserAliasParameter"
            }
          },
          {
            "Key": "AttemptID",
            "Value": {
              "Ref": "AttemptIdParameter"
            }
          }
        ]
      }
    }
  }
}
